[project]
name = "pyhaha"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ulrik Antoniussen Halmøy", email = ""},
]
dependencies = ["pytest>=8.3.4"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
